Closed Bug 510218 Opened 16 years ago Closed 16 years ago

nsSaveMsgListener QueryInterface is missing nsIRequestObserver

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b4

People

(Reporter: timeless, Assigned: timeless)

References

()

Details

Attachments

(1 file)

232 NS_DECL_NSIURLLISTENER 233 NS_DECL_NSIMSGCOPYSERVICELISTENER 234 NS_DECL_NSISTREAMLISTENER 235 NS_DECL_NSIREQUESTOBSERVER 236 NS_DECL_NSICANCELABLE 1441 NS_IMPL_ISUPPORTS4(nsSaveMsgListener, nsIUrlListener, nsIMsgCopyServiceListener, nsIStreamListener, nsICancelable)
Attached patch patchSplinter Review
Attachment #394281 - Flags: superreview?(bugzilla)
Attachment #394281 - Flags: review?(bugzilla)
Attachment #394281 - Flags: superreview?(bugzilla)
Attachment #394281 - Flags: superreview+
Attachment #394281 - Flags: review?(bugzilla)
Attachment #394281 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: