Bug 510218 nsSaveMsgListener QueryInterface is missing nsIRequestObserver r=standard8 sr=standard8